[package]
name = "avoxel"
version = "0.1.0"
authors = ["nic96 <nic96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
rendering = ["avoxel_rendering", "avoxel_mesher", "avoxel_chunk_map/mesher"]

[dependencies]
avoxel_blocks = { path = "crates/avoxel_blocks", version = "0.1.0" }
avoxel_chunk = { path = "crates/avoxel_chunk", version = "0.1.0" }
avoxel_chunk_map = { path = "crates/avoxel_chunk_map", version = "0.1.0" }
avoxel_math = { path = "crates/avoxel_math", version = "0.1.0" }
avoxel_physics = { path = "crates/avoxel_physics", version = "0.1.0" }
bevy_app = "0.5.0"
# Optional
avoxel_mesher = { path = "crates/avoxel_mesher", version = "0.1.0", optional = true }
avoxel_rendering = { path = "crates/avoxel_rendering", version = "0.1.0", optional = true }

[dev-dependencies]
bevy = "0.5.0"
nalgebra = "0.26"

[[example]]
name = "demo"
path = "examples/game/demo.rs"
required-features = ["rendering"]

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "e3fb23d4", version = "0.5.0" }
bevy_math = { git = "https://github.com/bevyengine/bevy.git", rev = "e3fb23d4", version = "0.5.0" }
bevy_app = {git = "https://github.com/bevyengine/bevy.git", rev = "e3fb23d4", version = "0.5.0" }

[profile.dev]
opt-level = 2

# use same profile for test as dev to avoid recompiling
[profile.test]
opt-level = 2

[profile.release]
lto = true

[profile.bench]
lto = true
