[package]
name = "avoxel_blocks"
version = "0.1.0"
authors = ["nic96 <nic96@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avoxel_rendering = { path = "../avoxel_rendering", version = "0.1.0" }
bevy = "0.5.0"
serde = "1.0"
serde_json = "1.0"
