[package]
name = "avoxel_chunk"
version = "0.1.0"
authors = ["nic96 <jeromyreimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avoxel_math = { path = "../avoxel_math", version = "0.1.0" }
bevy_math = "0.4.0"
byteorder = "1.3"
lz4 = "1.23"
serde = "1.0"
serde_bytes = "0.11"

[dev-dependencies]
avoxel_generator = { path = "../avoxel_generator", version = "0.1.0" }
criterion = "0.3"

[[bench]]
name = "chunk_compression"
harness = false

