[package]
name = "avoxel_physics"
version = "0.1.0"
authors = ["nic96 <jeromyreimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
avoxel_blocks = { path = "../avoxel_blocks", version = "0.1.0" }
avoxel_chunk_map = { path = "../avoxel_chunk_map", version = "0.1.0" }
avoxel_math = { path = "../avoxel_math", version = "0.1.0" }
bevy = "0.5.0"
bitflags = "1.2"
generational-arena = { version = "0.2", features = ["serde"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "micro"
harness = false
